[gd_scene load_steps=7 format=2]

[ext_resource path="res://start.gd" type="Script" id=1]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=2]
[ext_resource path="res://img/cloud-icon-pixelart.png" type="Texture" id=3]
[ext_resource path="res://img/title-lastbastion.png" type="Texture" id=4]
[ext_resource path="res://Fuentes/dogicabold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
position = Vector2( -376, -468.001 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_left = -28.2754
margin_top = 25.0305
margin_right = 11.7246
margin_bottom = 65.0305

[node name="nubeIzq" type="Sprite" parent="CanvasLayer"]
position = Vector2( 121.724, 567.031 )
rotation = 1.5708
scale = Vector2( 0.939003, 0.939003 )
texture = ExtResource( 3 )

[node name="nubeDer" type="Sprite" parent="CanvasLayer"]
position = Vector2( 1782.74, 573.031 )
rotation = -1.5708
scale = Vector2( 0.880258, 0.880258 )
texture = ExtResource( 3 )

[node name="nubeBajo" type="Sprite" parent="CanvasLayer"]
position = Vector2( 965.725, 1104.03 )
scale = Vector2( 1.06495, 1.06495 )
texture = ExtResource( 3 )

[node name="nubeArriba" type="Sprite" parent="CanvasLayer"]
position = Vector2( 938.724, 29.0316 )
rotation = 3.14159
scale = Vector2( 1.13131, 1.13131 )
texture = ExtResource( 3 )

[node name="TitleGame" type="Sprite" parent="CanvasLayer"]
position = Vector2( 936.924, 413.831 )
scale = Vector2( 1.6664, 1.6664 )
texture = ExtResource( 4 )

[node name="start" type="Label" parent="CanvasLayer"]
margin_left = 772.725
margin_top = 609.031
margin_right = 1132.72
margin_bottom = 663.031
custom_fonts/font = SubResource( 1 )
text = "START"
align = 1
script = ExtResource( 1 )
